--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.input {
+  font-size: 18px;
+  font-weight: 700;
+  text-align: center;
+  z-index: 2;
+  height: 40px;
+  width: 200px;
+  border: 2px solid #9c02f5;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.rgb {
+  width: 200px;
+  height: 40px;
+  border: 4px solid black;
+  text-align: center;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 40px; 
+  color: #fff;
 }
